# code-atlas

./: .gitignore  README.md  pyproject.toml  requirements.txt
codeatlas/: __init__.py
codeatlas/analyzers/: factory.py  registry.py
codeatlas/analyzers/base/: artifact_builder.py  dependency_extractor.py  language_analyzer.py  structure_extractor.py  summary_generator.py  symbol_resolver.py
codeatlas/app/: project_selector.py  runner.py
codeatlas/config/: settings.py
codeatlas/core/: contracts.py  diagnostics.py  enums.py  exceptions.py
codeatlas/graph/: architecture_rules.py  cycle_detector.py  graph_builder.py
codeatlas/models/: artifact_models.py  graph_models.py  manifest_models.py  symbol_models.py
codeatlas/services/: artifact_generation_service.py  dependency_graph_service.py  file_discovery_service.py  json_serialization_service.py  language_detection_service.py  manifest_generation_service.py  repository_scanner.py  schema_validation_service.py  symbol_index_service.py
codeatlas/utils/: artifact_id_helper.py  confidence_helper.py  diagnostics_helper.py  hash_helper.py  import_helper.py  json_helper.py  module_name_helper.py  path_helper.py  symbol_id_helper.py
config/: codeatlas.yaml
tests/: conftest.py  test_artifact_generation_service.py  test_cli_entrypoints.py  test_dependency_graph_service.py  test_language_detection.py  test_python_ast_extractor.py  test_python_dependency_extractor.py  test_python_symbol_resolver.py  test_repository_scanner.py  test_symbol_index_service.py
tests/sample_project/: models.py  services.py  utils.py
(+7 files in other folders)
